--- a/src/pages/photoblog.astro
+++ b/src/pages/photoblog.astro
@@ -39,7 +39,7 @@ const featuredImages = await selectPics(albumIDs, 4);
     <h2>Aktuell</h2>
     <p class="text-with-button">
         Hi ich bin in Kanada!!!
-        <a href="/photoblog/Kanada" class="redlink">zur Blogseite -&gt;</a>
+        <a href="/photoblog/kanada" class="redlink">zur Blogseite -&gt;</a>
     </p>
 
     <!-- sorry -->
